tests/paczka1/fuzzy1/35150081.err
Error in line 5: Rt6qLvyvL A860 52,5
Error in line 10: Rt6qLvyvL S259 6,6
Error in line 16: Rt6qLvyvL A31 81,6
Error in line 14: A31 A860 65,4
Error in line 12: OlbDlQz6ukZ S14 78,7
Error in line 19: OlbDlQz6ukZ A860 23,1
